@@ -363,6 +363,10 @@ OCaml 4.04.0:
 - GPR#679: delay registration of docstring after the mapper is applied
   (Hugo Heuzard, review by Leo White)
 
+- GPR#805, GPR#815, GPR#833: check for integer overflow in String.concat
+  (Jeremy Yallop,
+   review by Damien Doligez, Alain Frisch, Daniel Bünzli, Fabrice Le Fessant)
+
 
 OCaml 4.03.0 (25 Apr 2016):
 ---------------------------
